// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SidebarInput (address) should match snapshot (bool) 1`] = `
<div
  className="c-sidebar__input-box"
>
  <input
    className="c-sidebar__input qa-change-input"
    maxLength="100"
    onChange={[Function]}
    placeholder="Address"
    value=""
  />
  <button
    className="c-sidebar__submit qa-submit-input"
    onClick={[Function]}
  >
    Reset
  </button>
</div>
`;

exports[`SidebarInput (address) should match snapshot (bool, text) 1`] = `
<div
  className="c-sidebar__input-box"
>
  <input
    className="c-sidebar__input qa-change-input"
    maxLength="100"
    onChange={[Function]}
    placeholder="Address"
    value="12345"
  />
  <button
    className="c-sidebar__submit qa-submit-input"
    onClick={[Function]}
  >
    Set
  </button>
</div>
`;

exports[`SidebarInput (address) should match snapshot (default) 1`] = `
<div
  className="c-sidebar__input-box"
>
  <input
    className="c-sidebar__input qa-change-input"
    maxLength="100"
    onChange={[Function]}
    placeholder="Address"
    value=""
  />
  <button
    className="c-sidebar__submit qa-submit-input"
    onClick={[Function]}
  >
    Set
  </button>
</div>
`;

exports[`SidebarInput (avatar) should match snapshot (bool) 1`] = `
<div
  className="c-sidebar__input-box"
>
  <input
    className="c-sidebar__input qa-change-input"
    maxLength="100"
    onChange={[Function]}
    placeholder="Avatar"
    value=""
  />
  <button
    className="c-sidebar__submit qa-submit-input"
    onClick={[Function]}
  >
    Reset
  </button>
</div>
`;

exports[`SidebarInput (avatar) should match snapshot (bool, text) 1`] = `
<div
  className="c-sidebar__input-box"
>
  <input
    className="c-sidebar__input qa-change-input"
    maxLength="100"
    onChange={[Function]}
    placeholder="Avatar"
    value="https://www.example.com/avatar.jpg"
  />
  <button
    className="c-sidebar__submit qa-submit-input"
    onClick={[Function]}
  >
    Set
  </button>
</div>
`;

exports[`SidebarInput (avatar) should match snapshot (default) 1`] = `
<div
  className="c-sidebar__input-box"
>
  <input
    className="c-sidebar__input qa-change-input"
    maxLength="100"
    onChange={[Function]}
    placeholder="Avatar"
    value=""
  />
  <button
    className="c-sidebar__submit qa-submit-input"
    onClick={[Function]}
  >
    Set
  </button>
</div>
`;
